個別ページOGP

--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,3 +1,10 @@
+<% content_for :ogp do %>
+  <title>グループ情報</title>
+  <meta property="og:title" content="test1" />
+  <meta property="og:description" content="test1" />
+  <meta property="og:image" content="<%= @post_url %>">
+<% end %>
+
 <div class="container">
     <div class="single-page">
         <h1>グループ情報</h1>
