header-icon fix

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="header-title">
       <%= link_to root_path, class:"header-icon-wrapper" do %>
-        <%= image_tag "header-icon", class:"header-icon-img" %>
+        <%= image_tag "header-icon.png", class:"header-icon-img" %>
       <% end %>
     </div>
 
