テキスト変更

--- a/app/views/shared/top/_profile.html.erb
+++ b/app/views/shared/top/_profile.html.erb
@@ -10,7 +10,7 @@
             <div class="top__user-info-status-item-wrapper">
               <div class="top__user-info-status-item">
                 <%= render "shared/top/post_status" %>
-                <span class="top__user-info-status-title">自分の募集</span>
+                <span class="top__user-info-status-title">募集</span>
               </div>
             </div>
             <div>
