星野変更テスト

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -16,7 +16,7 @@
                     <%= image_tag "line-btn-icon.png" %>
                   </div>
                   <div class="sns-btn__text">
-                    <%= "LINEでログイン" %>
+                    <%= "LINEログイン" %>
                   </div>
                   <% end %>
                 <% end %>
